Wk 7-8 Exercises Completed

--- a/Weeks7-8/Test.ipynb
+++ b/Weeks7-8/Test.ipynb
@@ -14085,192 +14085,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>[100 Grand Bar]</th>\n",
-       "      <th>[Anonymous brown globs that come in black and orange wrappers]</th>\n",
-       "      <th>[Any full-sized candy bar]</th>\n",
-       "      <th>[Black Jacks]</th>\n",
-       "      <th>[Bonkers (the candy)]</th>\n",
-       "      <th>[Bonkers (the board game)]</th>\n",
-       "      <th>[Bottle Caps]</th>\n",
-       "      <th>[Box'o'Raisins]</th>\n",
-       "      <th>[Broken glow stick]</th>\n",
-       "      <th>...</th>\n",
-       "      <th>[Three Musketeers]</th>\n",
-       "      <th>[Tolberone something or other]</th>\n",
-       "      <th>[Trail Mix]</th>\n",
-       "      <th>[Twix]</th>\n",
-       "      <th>[Vials of pure high fructose corn syrup, for main-lining into your vein]</th>\n",
-       "      <th>[Vicodin]</th>\n",
-       "      <th>[Whatchamacallit Bars]</th>\n",
-       "      <th>[White Bread]</th>\n",
-       "      <th>[Whole Wheat anything]</th>\n",
-       "      <th>[York Peppermint Patties]</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TrickOrTreat</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>No</th>\n",
-       "      <td>40.875772</td>\n",
-       "      <td>0.371097</td>\n",
-       "      <td>-0.606601</td>\n",
-       "      <td>0.822480</td>\n",
-       "      <td>-0.344335</td>\n",
-       "      <td>-0.213202</td>\n",
-       "      <td>-0.178412</td>\n",
-       "      <td>-0.081178</td>\n",
-       "      <td>-0.520071</td>\n",
-       "      <td>-0.860839</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.446922</td>\n",
-       "      <td>0.644960</td>\n",
-       "      <td>-0.225691</td>\n",
-       "      <td>0.662801</td>\n",
-       "      <td>-0.512043</td>\n",
-       "      <td>0.046387</td>\n",
-       "      <td>0.240856</td>\n",
-       "      <td>-0.764496</td>\n",
-       "      <td>-0.603925</td>\n",
-       "      <td>0.453167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Yes</th>\n",
-       "      <td>39.346154</td>\n",
-       "      <td>0.369565</td>\n",
-       "      <td>-0.608696</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>-0.369565</td>\n",
-       "      <td>-0.159420</td>\n",
-       "      <td>-0.057971</td>\n",
-       "      <td>0.144928</td>\n",
-       "      <td>-0.500000</td>\n",
-       "      <td>-0.833333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.434783</td>\n",
-       "      <td>0.572464</td>\n",
-       "      <td>-0.260870</td>\n",
-       "      <td>0.695652</td>\n",
-       "      <td>-0.405797</td>\n",
-       "      <td>0.043478</td>\n",
-       "      <td>0.253623</td>\n",
-       "      <td>-0.688406</td>\n",
-       "      <td>-0.637681</td>\n",
-       "      <td>0.384058</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 101 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    Age   [100 Grand Bar]  \\\n",
-       "TrickOrTreat                                \n",
-       "No            40.875772          0.371097   \n",
-       "Yes           39.346154          0.369565   \n",
-       "\n",
-       "               [Anonymous brown globs that come in black and orange wrappers]  \\\n",
-       "TrickOrTreat                                                                    \n",
-       "No                                                    -0.606601                 \n",
-       "Yes                                                   -0.608696                 \n",
-       "\n",
-       "               [Any full-sized candy bar]   [Black Jacks]  \\\n",
-       "TrickOrTreat                                                \n",
-       "No                               0.822480       -0.344335   \n",
-       "Yes                              0.833333       -0.369565   \n",
-       "\n",
-       "               [Bonkers (the candy)]   [Bonkers (the board game)]  \\\n",
-       "TrickOrTreat                                                        \n",
-       "No                         -0.213202                    -0.178412   \n",
-       "Yes                        -0.159420                    -0.057971   \n",
-       "\n",
-       "               [Bottle Caps]   [Box'o'Raisins]   [Broken glow stick]  ...  \\\n",
-       "TrickOrTreat                                                          ...   \n",
-       "No                 -0.081178         -0.520071             -0.860839  ...   \n",
-       "Yes                 0.144928         -0.500000             -0.833333  ...   \n",
-       "\n",
-       "               [Three Musketeers]   [Tolberone something or other]  \\\n",
-       "TrickOrTreat                                                         \n",
-       "No                       0.446922                         0.644960   \n",
-       "Yes                      0.434783                         0.572464   \n",
-       "\n",
-       "               [Trail Mix]    [Twix]  \\\n",
-       "TrickOrTreat                           \n",
-       "No               -0.225691  0.662801   \n",
-       "Yes              -0.260870  0.695652   \n",
-       "\n",
-       "               [Vials of pure high fructose corn syrup, for main-lining into your vein]  \\\n",
-       "TrickOrTreat                                                                              \n",
-       "No                                                    -0.512043                           \n",
-       "Yes                                                   -0.405797                           \n",
-       "\n",
-       "               [Vicodin]   [Whatchamacallit Bars]   [White Bread]  \\\n",
-       "TrickOrTreat                                                        \n",
-       "No              0.046387                 0.240856       -0.764496   \n",
-       "Yes             0.043478                 0.253623       -0.688406   \n",
-       "\n",
-       "               [Whole Wheat anything]   [York Peppermint Patties]  \n",
-       "TrickOrTreat                                                       \n",
-       "No                          -0.603925                    0.453167  \n",
-       "Yes                         -0.637681                    0.384058  \n",
-       "\n",
-       "[2 rows x 101 columns]"
-      ]
-     },
-     "execution_count": 268,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DatetimeIndex' object has no attribute 'TrickOrTreat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-383-ffb19fd8f1ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTrickOrTreat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# different way of doing it; includes Age\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DatetimeIndex' object has no attribute 'TrickOrTreat'"
+     ]
     }
    ],
    "source": [
-    "test.groupby(test.TrickOrTreat).mean()"
+    "test.groupby(test.TrickOrTreat).mean() # different way of doing it; includes Age"
    ]
   },
   {
@@ -14469,76 +14300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 384,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>unique</th>\n",
-       "      <th>top</th>\n",
-       "      <th>freq</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TrickOrTreat</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>No</th>\n",
-       "      <td>1113</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Yes</th>\n",
-       "      <td>137</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             count unique   top freq\n",
-       "TrickOrTreat                        \n",
-       "No            1113      4  Male  707\n",
-       "Yes            137      4  Male   88"
-      ]
-     },
-     "execution_count": 279,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test.groupby('TrickOrTreat')['Gender'].describe()"
+    "# test.groupby('TrickOrTreat')['Gender'].describe()"
    ]
   },
   {
