--- a/Weeks9-10/DWwP_Ch07/540Wk9-10_DWwP_Ch07.ipynb
+++ b/Weeks9-10/DWwP_Ch07/540Wk9-10_DWwP_Ch07.ipynb
@@ -25,7 +25,10 @@
     "import urllib.request, urllib.parse\n",
     "from urllib.error import HTTPError, URLError\n",
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# RegEx\n",
+    "import re"
    ]
   },
   {
