Completed Wk9-10 part 3

--- a/Weeks9-10/DWwP_Ch07/540Wk9-10_DWwP_Ch07.ipynb
+++ b/Weeks9-10/DWwP_Ch07/540Wk9-10_DWwP_Ch07.ipynb
@@ -4444,6 +4444,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environ{'ALLUSERSPROFILE': 'C:\\\\ProgramData',\n",
+       "        'APPDATA': 'C:\\\\Users\\\\micha\\\\AppData\\\\Roaming',\n",
+       "        'COMMONPROGRAMFILES': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMMONPROGRAMFILES(X86)': 'C:\\\\Program Files (x86)\\\\Common Files',\n",
+       "        'COMMONPROGRAMW6432': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMPUTERNAME': 'DESKTOP-KS36U2V',\n",
+       "        'COMSPEC': 'C:\\\\WINDOWS\\\\system32\\\\cmd.exe',\n",
+       "        'CONDA_DEFAULT_ENV': 'base',\n",
+       "        'CONDA_EXE': 'C:\\\\ProgramData\\\\Anaconda3\\\\Scripts\\\\conda.exe',\n",
+       "        'CONDA_PROMPT_MODIFIER': '(base) ',\n",
+       "        'CONDA_PYTHON_EXE': 'C:\\\\ProgramData\\\\Anaconda3\\\\python.exe',\n",
+       "        'CONDA_ROOT': 'C:\\\\ProgramData\\\\Anaconda3',\n",
+       "        'CONDA_SHLVL': '1',\n",
+       "        'DRIVERDATA': 'C:\\\\Windows\\\\System32\\\\Drivers\\\\DriverData',\n",
+       "        'FPS_BROWSER_APP_PROFILE_STRING': 'Internet Explorer',\n",
+       "        'FPS_BROWSER_USER_PROFILE_STRING': 'Default',\n",
+       "        'HOMEDRIVE': 'C:',\n",
+       "        'HOMEPATH': '\\\\Users\\\\micha',\n",
+       "        'LOCALAPPDATA': 'C:\\\\Users\\\\micha\\\\AppData\\\\Local',\n",
+       "        'LOGONSERVER': '\\\\\\\\DESKTOP-KS36U2V',\n",
+       "        'NUMBER_OF_PROCESSORS': '8',\n",
+       "        'ONEDRIVE': 'C:\\\\Users\\\\micha\\\\OneDrive',\n",
+       "        'ONEDRIVECONSUMER': 'C:\\\\Users\\\\micha\\\\OneDrive',\n",
+       "        'OS': 'Windows_NT',\n",
+       "        'PATH': 'C:\\\\ProgramData\\\\Anaconda3;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\mingw-w64\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\usr\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Scripts;C:\\\\ProgramData\\\\Anaconda3\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\condabin;C:\\\\ProgramData\\\\Anaconda3;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\mingw-w64\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\usr\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Library\\\\bin;C:\\\\ProgramData\\\\Anaconda3\\\\Scripts;C:\\\\Program Files\\\\Python38\\\\Scripts;C:\\\\Program Files\\\\Python38;C:\\\\WINDOWS\\\\system32;C:\\\\WINDOWS;C:\\\\WINDOWS\\\\System32\\\\Wbem;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0;C:\\\\WINDOWS\\\\System32\\\\OpenSSH;C:\\\\Program Files\\\\Git\\\\cmd;C:\\\\Program Files\\\\Git\\\\mingw64\\\\bin;C:\\\\Program Files\\\\Git\\\\usr\\\\bin;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python39\\\\Scripts;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python39;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38-32\\\\Scripts;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python38-32;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;C:\\\\Program Files\\\\JetBrains\\\\PyCharm Edu 2019.3.3\\\\bin;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\GitHubDesktop\\\\bin;C:\\\\Users\\\\micha\\\\AppData\\\\Roaming\\\\TinyTeX\\\\bin\\\\win32;C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;.',\n",
+       "        'PATHEXT': '.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW',\n",
+       "        'PROCESSOR_ARCHITECTURE': 'AMD64',\n",
+       "        'PROCESSOR_IDENTIFIER': 'Intel64 Family 6 Model 126 Stepping 5, GenuineIntel',\n",
+       "        'PROCESSOR_LEVEL': '6',\n",
+       "        'PROCESSOR_REVISION': '7e05',\n",
+       "        'PROGRAMDATA': 'C:\\\\ProgramData',\n",
+       "        'PROGRAMFILES': 'C:\\\\Program Files',\n",
+       "        'PROGRAMFILES(X86)': 'C:\\\\Program Files (x86)',\n",
+       "        'PROGRAMW6432': 'C:\\\\Program Files',\n",
+       "        'PROMPT': '(base) $P$G',\n",
+       "        'PSMODULEPATH': 'C:\\\\Program Files\\\\WindowsPowerShell\\\\Modules;C:\\\\WINDOWS\\\\system32\\\\WindowsPowerShell\\\\v1.0\\\\Modules',\n",
+       "        'PUBLIC': 'C:\\\\Users\\\\Public',\n",
+       "        'PYCHARM EDU': 'C:\\\\Program Files\\\\JetBrains\\\\PyCharm Edu 2019.3.3\\\\bin;',\n",
+       "        'SESSIONNAME': 'Console',\n",
+       "        'SYSTEMDRIVE': 'C:',\n",
+       "        'SYSTEMROOT': 'C:\\\\WINDOWS',\n",
+       "        'TEMP': 'C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'TMP': 'C:\\\\Users\\\\micha\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'USERDOMAIN': 'DESKTOP-KS36U2V',\n",
+       "        'USERDOMAIN_ROAMINGPROFILE': 'DESKTOP-KS36U2V',\n",
+       "        'USERNAME': 'micha',\n",
+       "        'USERPROFILE': 'C:\\\\Users\\\\micha',\n",
+       "        'WINDIR': 'C:\\\\WINDOWS',\n",
+       "        'CONDA_PREFIX': 'C:\\\\ProgramData\\\\Anaconda3',\n",
+       "        'JPY_INTERRUPT_EVENT': '3280',\n",
+       "        'IPY_INTERRUPT_EVENT': '3280',\n",
+       "        'JPY_PARENT_PID': '3284',\n",
+       "        'TERM': 'xterm-color',\n",
+       "        'CLICOLOR': '1',\n",
+       "        'PAGER': 'cat',\n",
+       "        'GIT_PAGER': 'cat',\n",
+       "        'MPLBACKEND': 'module://ipykernel.pylab.backend_inline'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
