--- a/Weeks9-10/TestTwitter.ipynb
+++ b/Weeks9-10/TestTwitter.ipynb
@@ -182,22 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Authorization': 'Bearer AAAAAAAAAAAAAAAAAAAAACVGMwEAAAAA%2Fqcvxgx7uRSU5Q5N7OONqlBSy%2F0%3DK6XQaYqMQTetKXZBnySNinYIVLdaulzsHm5hTiETCWcH43e7f9'}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "headers"
+    "# headers"
    ]
   },
   {
