--- a/Weeks7-8/BreitbachScott_DSC540_Weeks7-8.ipynb
+++ b/Weeks7-8/BreitbachScott_DSC540_Weeks7-8.ipynb
@@ -4078,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -4187,7 +4187,7 @@
        "2016-10-24 05:14:24.625  United States  South Dakota  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,7 +4205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4214,7 +4214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4301,7 @@
        "2016-10-25 00:24:28.753  United States        tx  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -4399,7 +4399,7 @@
        "2016-10-25 23:49:58.685  United States         California  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4417,7 +4417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4436,7 @@
        "              dtype='datetime64[ns]', freq='H')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4455,7 +4455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -4470,7 +4470,7 @@
        "Name: Timestamp, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4481,7 +4481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4490,7 +4490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -4504,7 +4504,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4524,7 +4524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -4600,13 +4600,29 @@
        "2016-10-30  41.666667"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "timeDF.resample('D').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLite.to_csv('candy_cleaned.csv', index=False)"
    ]
   },
   {
