--- a/Final Project/BreitbachScott_DSC540_Milestone4.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone4.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "Initially I tried to get an API key to Untappd.com, but they are restrictive in who they offer API keys to and my purposes did not qualify.  \n",
     "I treid twice in January to request an API from BreweryDB.com, and then learned that they are temporarily not offering API keys, though I did manage to get an API key to their sandbox, which contains a subset of their database.  \n",
-    "My next backup plan was BeerMapping.com. I as able to obtain an API key and I spent a fair amount of time submitting updates to their database for breweries. This week, their website went down, so I went back to BreweryDB's sandbox. Once I got my code figured out for retrieving the data I wanted, I did a search for Nebraska, which returned 0 results. I was able to return a handful of breweries from Colorado, so I know the code was working, unfortunately there were just no Nebraska breweries in the sandbox.  \n",
+    "My next backup plan was BeerMapping.com. I as able to obtain an API key and I spent a fair amount of time submitting updates to their database for breweries. This week, their website went down, so I went back to BreweryDB's sandbox. Once I got my code figured out for retrieving the data I wanted, I did a search for Nebraska, which returned 0 results. I was able to return a handful of breweries from Colorado, so I know the code was working, unfortunately there were just no Nebraska breweries in the sandbox. [See code here](https://github.com/ScottBreitbach/DSC540/blob/main/Final%20Project/BrewerydbAPI.ipynb)  \n",
     "It is Sunday morning now and in a last ditch effort, I checked BeerMapping.com again and it appears to be back up!"
    ]
   },
