--- a/Final Project/BreitbachScott_DSC540_Milestone3.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone3.ipynb
@@ -313,8 +313,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Brewery 719</td>\n",
-       "      <td>Lincoln</td>\n",
+       "      <td>Granite City Food &amp; Brewery</td>\n",
+       "      <td>Omaha</td>\n",
        "      <td>Brewpub</td>\n",
        "      <td>On tap at the brewery</td>\n",
        "      <td>Winery</td>\n",
@@ -332,11 +332,17 @@
        "</div>"
       ],
       "text/plain": [
-       "               Name     City     Type           Distribution   notes\n",
-       "count            55       55       55                     47      34\n",
-       "unique           55       42        5                     21      33\n",
-       "top     Brewery 719  Lincoln  Brewpub  On tap at the brewery  Winery\n",
-       "freq              1        4       19                     15       2"
+       "                               Name   City     Type           Distribution  \\\n",
+       "count                            55     55       55                     47   \n",
+       "unique                           55     42        5                     21   \n",
+       "top     Granite City Food & Brewery  Omaha  Brewpub  On tap at the brewery   \n",
+       "freq                              1      4       19                     15   \n",
+       "\n",
+       "         notes  \n",
+       "count       34  \n",
+       "unique      33  \n",
+       "top     Winery  \n",
+       "freq         2  "
       ]
      },
      "execution_count": 10,
@@ -502,48 +508,48 @@
     {
      "data": {
       "text/plain": [
-       "Lincoln                                                                                                    4\n",
        "Omaha                                                                                                      4\n",
+       "Lincoln                                                                                                    4\n",
        "LaVista                                                                                                    3\n",
-       "Hastings                                                                                                   2\n",
+       "Kearney                                                                                                    2\n",
+       "Omaha - Midtown                                                                                            2\n",
        "Omaha - Downtown                                                                                           2\n",
        "North Platte                                                                                               2\n",
-       "Omaha - Midtown                                                                                            2\n",
-       "Kearney                                                                                                    2\n",
-       "Seward                                                                                                     1\n",
-       "Kearney / Omaha - West / Omaha - Downtown / Axtell                                                         1\n",
-       "Johnson Lake                                                                                               1\n",
-       "Omaha / Lincoln                                                                                            1\n",
-       "Lincoln / Lincoln - Haymarket                                                                              1\n",
-       "Syracuse                                                                                                   1\n",
-       "Lincoln - West / Lincoln - SE (Beer Hall) / Omaha - West (Beer Lounge) / Omaha - Downtown (Culture Lab)    1\n",
-       "Albion                                                                                                     1\n",
-       "Atkinson                                                                                                   1\n",
-       "Pawnee City / Lincoln                                                                                      1\n",
-       "Taylor                                                                                                     1\n",
-       "Imperial                                                                                                   1\n",
-       "Grand Island                                                                                               1\n",
-       "Elkhorn                                                                                                    1\n",
-       "Lexington                                                                                                  1\n",
-       "Papillion                                                                                                  1\n",
-       "Ohiowa                                                                                                     1\n",
-       "Holdrege                                                                                                   1\n",
-       "Omaha - West                                                                                               1\n",
-       "Fairfield                                                                                                  1\n",
-       "Benson / Omaha - SW / Omaha - Little Bohemia / Omaha - The Switch                                          1\n",
-       "Norfolk                                                                                                    1\n",
-       "Ord                                                                                                        1\n",
-       "Lincoln / Lincoln - South                                                                                  1\n",
-       "Broken Bow / Grand Island / Lincoln                                                                        1\n",
-       "Beatrice                                                                                                   1\n",
-       "Springfield                                                                                                1\n",
-       "Scottsbluff                                                                                                1\n",
+       "Hastings                                                                                                   2\n",
        "Columbus                                                                                                   1\n",
-       "Valentine                                                                                                  1\n",
-       "McCook                                                                                                     1\n",
-       "Alliance                                                                                                   1\n",
+       "Elkhorn                                                                                                    1\n",
+       "Pawnee City / Lincoln                                                                                      1\n",
+       "Lincoln / Lincoln - South                                                                                  1\n",
+       "Holdrege                                                                                                   1\n",
        "Wayne                                                                                                      1\n",
+       "Lincoln - West / Lincoln - SE (Beer Hall) / Omaha - West (Beer Lounge) / Omaha - Downtown (Culture Lab)    1\n",
+       "Benson / Omaha - SW / Omaha - Little Bohemia / Omaha - The Switch                                          1\n",
+       "Albion                                                                                                     1\n",
+       "Valentine                                                                                                  1\n",
+       "Beatrice                                                                                                   1\n",
+       "Broken Bow / Grand Island / Lincoln                                                                        1\n",
+       "Omaha / Lincoln                                                                                            1\n",
+       "Norfolk                                                                                                    1\n",
+       "Springfield                                                                                                1\n",
+       "Omaha - West                                                                                               1\n",
+       "Seward                                                                                                     1\n",
+       "Atkinson                                                                                                   1\n",
        "Lincoln - Haymarket                                                                                        1\n",
+       "Alliance                                                                                                   1\n",
+       "Kearney / Omaha - West / Omaha - Downtown / Axtell                                                         1\n",
+       "Taylor                                                                                                     1\n",
+       "Grand Island                                                                                               1\n",
+       "Fairfield                                                                                                  1\n",
+       "Ohiowa                                                                                                     1\n",
+       "Lincoln / Lincoln - Haymarket                                                                              1\n",
+       "McCook                                                                                                     1\n",
+       "Imperial                                                                                                   1\n",
+       "Scottsbluff                                                                                                1\n",
+       "Lexington                                                                                                  1\n",
+       "Syracuse                                                                                                   1\n",
+       "Papillion                                                                                                  1\n",
+       "Johnson Lake                                                                                               1\n",
+       "Ord                                                                                                        1\n",
        "Name: City, dtype: int64"
       ]
      },
@@ -1031,12 +1037,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "testDF = pd.DataFrame()\n",
-    "checkDF = pd.read_csv('nebraskaCleaned.csv')\n",
+    "checkDF = pd.read_csv('CSV_nebraskaCleaned.csv')\n",
     "actualDF = pd.read_csv('testData.csv')\n",
     "testDF['NamesToCheck'] = checkDF['Brewery Name']"
    ]
@@ -1050,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1540,7 @@
        "21                  Jaipur Brewing Company       59  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2642,13 +2648,29 @@
        "54  Lincoln - West / Lincoln - SE (Beer Hall) / Om...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "breweriesDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breweriesDF.to_csv('WEB_NEbeerReddit.csv', index=False)"
    ]
   },
   {
