--- a/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
@@ -125,22 +125,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import requests\n",
+    "# Use table from Wikipedia page to generage a list of suburbs:\n",
     "url = \"https://en.wikipedia.org/wiki/Neighborhoods_of_Omaha,_Nebraska\"\n",
-    "# Get the table I want from the Wikipedia page:\n",
     "listOfTables = pd.read_html(url)\n",
     "omahaSubsDF = listOfTables[1]\n",
-    "# Generate a list of Omaha suburbs from the first column (adding a couple):\n",
     "omahaSubs = list(omahaSubsDF['Neighborhoods in Omaha alphabetical order'][1:])\n",
-    "omahaSubs.extend(['Omaha', 'LaVista'])"
+    "omahaSubs.extend(['Omaha', 'LaVista'])  # Add a couple"
    ]
   },
   {
@@ -166,6 +157,64 @@
     "omahaSuburbs(webData, 'City')\n",
     "omahaSuburbs(apiData, 'City')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Standardize phone numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import phonenumbers as pn\n",
+    "\n",
+    "def fixPhoneNums(df, colName):\n",
+    "    '''Attempts to convert each phone number to a standardized format and add\n",
+    "    to a list, adding NaN if it fails. Assigns the list back to the DF column.'''\n",
+    "    phList = []\n",
+    "    for i in range(len(df[colName])):\n",
+    "        try:\n",
+    "            phList.append(pn.format_number(pn.parse(df[colName][i], 'US'), \n",
+    "                                           pn.PhoneNumberFormat.NATIONAL))\n",
+    "        except:\n",
+    "            phList.append(np.nan)\n",
+    "    df[colName] = phList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixPhoneNums(apiData, 'PhoneNum')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
