--- a/Final Project/BreitbachScott_DSC540_Milestone3.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to connect; try again later.\n"
+     ]
+    }
+   ],
    "source": [
     "# This didn't work all the time so I added some redundancy:\n",
     "try:\n",
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -176,11 +184,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>Brewery Name</th>\n",
        "      <th>City</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Distribution</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Type of Brewery</th>\n",
+       "      <th>Type of Distribution</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -213,23 +221,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Name                       City     Type  \\\n",
-       "0   Backswing Brewing Co.                    Lincoln    Micro   \n",
-       "1          Benson Brewery                      Omaha  Taproom   \n",
-       "2  Boiler Brewing Company  Lincoln / Lincoln - South  Taproom   \n",
+       "             Brewery Name                       City Type of Brewery  \\\n",
+       "0   Backswing Brewing Co.                    Lincoln           Micro   \n",
+       "1          Benson Brewery                      Omaha         Taproom   \n",
+       "2  Boiler Brewing Company  Lincoln / Lincoln - South         Taproom   \n",
        "\n",
-       "                                    Distribution  \\\n",
+       "                            Type of Distribution  \\\n",
        "0  On-tap at the brewery and at select locations   \n",
        "1                     On tap only at the brewery   \n",
        "2                     On tap only at the brewery   \n",
        "\n",
-       "                                               notes  \n",
+       "                                               Notes  \n",
        "0                            Distro planned for 2016  \n",
        "1  Other beers, locals included, on tap. Omaha Br...  \n",
        "2                            Tours posted on FB page  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -287,11 +295,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
+       "      <th>Brewery Name</th>\n",
        "      <th>City</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Distribution</th>\n",
-       "      <th>notes</th>\n",
+       "      <th>Type of Brewery</th>\n",
+       "      <th>Type of Distribution</th>\n",
+       "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -332,20 +340,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Name   City     Type           Distribution  \\\n",
-       "count                            55     55       55                     47   \n",
-       "unique                           55     42        5                     21   \n",
-       "top     Granite City Food & Brewery  Omaha  Brewpub  On tap at the brewery   \n",
-       "freq                              1      4       19                     15   \n",
+       "                       Brewery Name   City Type of Brewery  \\\n",
+       "count                            55     55              55   \n",
+       "unique                           55     42               5   \n",
+       "top     Granite City Food & Brewery  Omaha         Brewpub   \n",
+       "freq                              1      4              19   \n",
        "\n",
-       "         notes  \n",
-       "count       34  \n",
-       "unique      33  \n",
-       "top     Winery  \n",
-       "freq         2  "
+       "         Type of Distribution   Notes  \n",
+       "count                      47      34  \n",
+       "unique                     21      33  \n",
+       "top     On tap at the brewery  Winery  \n",
+       "freq                       15       2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -373,13 +381,13 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 55 entries, 0 to 54\n",
       "Data columns (total 5 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   Name          55 non-null     object\n",
-      " 1   City          55 non-null     object\n",
-      " 2   Type          55 non-null     object\n",
-      " 3   Distribution  47 non-null     object\n",
-      " 4   notes         34 non-null     object\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   Brewery Name          55 non-null     object\n",
+      " 1   City                  55 non-null     object\n",
+      " 2   Type of Brewery       55 non-null     object\n",
+      " 3   Type of Distribution  47 non-null     object\n",
+      " 4   Notes                 34 non-null     object\n",
       "dtypes: object(5)\n",
       "memory usage: 2.3+ KB\n"
      ]
@@ -406,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +445,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +561,7 @@
        "Name: City, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +688,7 @@
        "2                            Tours posted on FB page            2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +829,7 @@
        "2                            Tours posted on FB page            2  Lincoln  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +875,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +992,7 @@
        "2  Lincoln / Lincoln - South  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1548,7 @@
        "21                  Jaipur Brewing Company       59  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2656,7 @@
        "54  Lincoln - West / Lincoln - SE (Beer Hall) / Om...  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
